--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
   <script src="lib/raty/jquery.raty.js"></script>
   <script src="lib/jquery.validate.min.js"></script>
      
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key="></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyBMGEAp9dZ242jLnqDMo525r1g2EWQqfaI"></script>
   
   <script src="lib/gmaps.js?version=1.0.0"></script>
   <script src="lib/jquery.translate.js?version=1.0.0"></script>
