--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -2037,7 +2037,7 @@
    <input type="hidden" name="receipt_order_id" id="receipt_order_id" class="receipt_order_id">
 
    <div class="content-wrap">
-      <img class="stic-successful" src="lib/icons/successful.svg" onerror="this.src='successful.png'">
+      <img class="stic-successful" src="lib/icons/success.gif" onerror="this.src='successful.png'">
    </div>
    
    <div class="cream_header text-center">
