--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
   <script src="js/template.js?version=1.0.0"></script>  
   <script src="js/app.js?version=1.0.0"></script>
   <script src="js/map-wrapper.js?version=1.0.0"></script>  
+  <script src="js/freshchat-wrapper.js?version=1.0.0"></script> 
 </head>
 <body>
 
